--- a/UI-Files/package.json
+++ b/UI-Files/package.json
@@ -6,9 +6,11 @@
     "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
     "@types/react-dom": "16.9.1",
+    "@types/react-router-dom": "^5.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "typescript": "3.6.4"
