--- a/UI-Files/package.json
+++ b/UI-Files/package.json
@@ -6,6 +6,7 @@
     "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
