--- a/UI-Files/package.json
+++ b/UI-Files/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
     "@types/react-dom": "16.9.1",
     "@types/react-redux": "^7.1.5",
@@ -23,8 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +41,19 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.5"
+    "@types/jest": "^24.0.23",
+    "@types/react": "^16.9.5",
+    "ts-jest": "^24.1.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
   }
 }
