prettier and husky

--- a/UI-Files/package.json
+++ b/UI-Files/package.json
@@ -9,6 +9,9 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "bootstrap": "^4.3.1",
+    "husky": "^3.1.0",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
@@ -43,5 +46,10 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
