--- a/UI-Files/package.json
+++ b/UI-Files/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
     "@types/react-dom": "16.9.1",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "bootstrap": "^4.3.1",
+    "husky": "^3.1.0",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
@@ -22,8 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "jest"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,19 +45,11 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
-    "@types/react": "^16.9.5",
-    "ts-jest": "^24.1.0"
+    "@types/react": "^16.9.5"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
