overall ui for customer user interface

--- a/UI-Files/package.json
+++ b/UI-Files/package.json
@@ -45,7 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.5"
+    "@types/react": "^16.9.5",
+    "file-loader": "^5.0.2"
   },
   "husky": {
     "hooks": {
