--- a/UI-Files/package.json
+++ b/UI-Files/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.1.0",
     "bootstrap": "^4.3.1",
     "husky": "^3.1.0",
+    "moment": "^2.24.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "react": "^16.10.2",
